# strade-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
app/: __init__.py  logger.py  main_scheduler.py  worker.py  worker_jobs.py
app/exchange/: exchange_factory.py
app/services/: bot_service.py  strategy_service.py  trade_service.py
app/strategies/: btcusdt_breakout.py
app/utils/: db.py  now.py  redis_client.py
